--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "program": "main.py",
             "console": "integratedTerminal",
             "args": [
-                "-input_file", "data/a_example.txt"
+                "-input_file", "data/a_example.txt",
+                "--method", "andrei_maxbooks"
             ]
         },
         {
@@ -21,7 +22,8 @@
             "program": "main.py",
             "console": "integratedTerminal",
             "args": [
-                "-input_file", "data/b_read_on.txt"
+                "-input_file", "data/b_read_on.txt",
+                "--method", "andrei_maxbooks"
             ]
         },
         {
@@ -31,7 +33,8 @@
             "program": "main.py",
             "console": "integratedTerminal",
             "args": [
-                "-input_file", "data/c_incunabula.txt"
+                "-input_file", "data/c_incunabula.txt",
+                "--method", "andrei_maxbooks"
             ]
         },
         {
@@ -41,7 +44,8 @@
             "program": "main.py",
             "console": "integratedTerminal",
             "args": [
-                "-input_file", "data/d_tough_choices.txt"
+                "-input_file", "data/d_tough_choices.txt",
+                "--method", "andrei_maxbooks"
             ]
         },
         {
@@ -51,7 +55,8 @@
             "program": "main.py",
             "console": "integratedTerminal",
             "args": [
-                "-input_file", "data/e_so_many_books.txt"
+                "-input_file", "data/e_so_many_books.txt",
+                "--method", "andrei_maxbooks"
             ]
         },
         {
@@ -61,7 +66,8 @@
             "program": "main.py",
             "console": "integratedTerminal",
             "args": [
-                "-input_file", "data/f_libraries_of_the_world.txt"
+                "-input_file", "data/f_libraries_of_the_world.txt",
+                "--method", "andrei_maxbooks"
             ]
         }
     ]
