--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             "args": [
                 "-input_file", "data/a_example.txt",
-                "--method", "andrei_maxbooks"
+                "--method", "stijn_youri"
             ]
         },
         {
@@ -23,7 +23,7 @@
             "console": "integratedTerminal",
             "args": [
                 "-input_file", "data/b_read_on.txt",
-                "--method", "andrei_maxbooks"
+                "--method", "stijn_youri"
             ]
         },
         {
@@ -34,7 +34,7 @@
             "console": "integratedTerminal",
             "args": [
                 "-input_file", "data/c_incunabula.txt",
-                "--method", "andrei_maxbooks"
+                "--method", "stijn_youri"
             ]
         },
         {
@@ -45,7 +45,7 @@
             "console": "integratedTerminal",
             "args": [
                 "-input_file", "data/d_tough_choices.txt",
-                "--method", "andrei_maxbooks"
+                "--method", "stijn_youri"
             ]
         },
         {
@@ -56,7 +56,7 @@
             "console": "integratedTerminal",
             "args": [
                 "-input_file", "data/e_so_many_books.txt",
-                "--method", "andrei_maxbooks"
+                "--method", "stijn_youri"
             ]
         },
         {
@@ -67,7 +67,7 @@
             "console": "integratedTerminal",
             "args": [
                 "-input_file", "data/f_libraries_of_the_world.txt",
-                "--method", "andrei_maxbooks"
+                "--method", "stijn_youri"
             ]
         }
     ]
